fix store/restore (files only), add bat store script

--- a/src/Tools/CreateSnapshot/CreateSnapshot.csproj
+++ b/src/Tools/CreateSnapshot/CreateSnapshot.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\..\Debug\tools\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -28,7 +28,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\..\Release\tools\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -64,4 +64,11 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>REM create tools dir if missing 
+If NOT exist "$(SolutionDir)$(Configuration)\tools\" mkdir "$(SolutionDir)$(Configuration)\tools\"
+REM copy scrips
+copy /Y "$(ProjectDir)\snapshot.bat" "$(SolutionDir)$(Configuration)\tools\snapshot.bat"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
